memrapihkan border pada tiap 'card'

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -89,7 +89,7 @@
         </div>
         <div class="row mx-md-5 px-2 mt-3">
           <div class="col-md-4" data-aos="fade-right">
-            <div class="card bgWarna2 bgWarna2Light overflow-hidden p-4 mb-3 teksWarna3 teksWarna3Light">
+            <div class="card bgWarna2 bgWarna2Light overflow-hidden p-4 mb-3 teksWarna3 teksWarna3Light border-0">
               <div id="carouselExampleSlidesOnly" class="carousel slide w-100" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -174,7 +174,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card overflow-hidden border-0" data-aos="fade-up" data-aos-delay="600">
+              <div class="card overflow-hidden border-0 border-top" data-aos="fade-up" data-aos-delay="600">
                 <div class="card-header card-headerLight bgWarna2 bgWarna2Light">
                   <a class="collapsed btn teksWarna3 teksWarna3Light" data-bs-toggle="collapse" href="#collapseTwo">
                     Organization
@@ -222,7 +222,7 @@
         </div>
         <div class="row mx-4 mx-md-0">
           <div class="col-md-4 mb-4">
-            <div class="card p-4 bgWarna2 bgWarna2Light" data-aos="fade-up" data-aos-duration="1000">
+            <div class="card p-4 bgWarna2 bgWarna2Light border-0" data-aos="fade-up" data-aos-duration="1000">
               <div class="card p-1 align-items-center align-self-center mb-4">
                 <picture>
                   <source srcset="img/skills/skillFrontend.webp" type="image/webp" id="cadanganFotoAbout3Webp">
@@ -237,7 +237,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-4">
-            <div class="card p-4 bgWarna2 bgWarna2Light" data-aos="fade-up" data-aos-duration="1500">
+            <div class="card p-4 bgWarna2 bgWarna2Light border-0" data-aos="fade-up" data-aos-duration="1500">
               <div class="card p-1 align-items-center align-self-center mb-4">
                 <picture>
                   <source srcset="img/skills/skillBackend.webp" type="image/webp" id="cadanganFotoAbout3Webp">
@@ -252,7 +252,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="card p-4 bgWarna2 bgWarna2Light" data-aos="fade-up" data-aos-duration="2000">
+            <div class="card p-4 bgWarna2 bgWarna2Light border-0" data-aos="fade-up" data-aos-duration="2000">
               <div class="card p-1 align-items-center align-self-center mb-4">
                 <picture>
                   <source srcset="img/skills/skillDesign.webp" type="image/webp" id="cadanganFotoAbout3Webp">
